delete twitter button

--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,11 @@
 		<input id="company" name="company" type="text">
 		<label for="notes">Notes</label>
 		<textarea id="notes" name="notes" type="text"></textarea>
-		<label for="twitter">Twitter</label>
-		<input id="twitter" name="twitter" type="text">
 		<input id="submit" type="submit" value="Save contact">
 	</form>
 	<div id="contact-list"></div>
-    <script src="./assets/js/app.js"></script>
+	<script src="./assets/js/app.js"></script>
+	
+	<button  id="update-contact">Update Contact</button>
 </body>
 </html> 
