--- a/src/index.html
+++ b/src/index.html
@@ -4,28 +4,37 @@
 	<meta  charset="UTF-8">
 	<meta  name="viewport"  content="width=device-width, initial-scale=1.0">
 	<meta  http-equiv="X-UA-Compatible"  content="ie=edge">
-	<title>Address book</title>
+	<title>My Address book</title>
 </head>
 
 <body>
-	<h1>Contacts</h1>
-	<button  id="add-contact">Add Contact</button>
+	<h1>My Address Book</h1>
 	<form id="new-contact-form">
+
 		<label for="name">Name</label>
-		<input id="name" name="name" type="text">
+		<input id="name" name="name" type="text"><br><br>
+
 		<label for="email">Email</label>
-		<input id="email" name="email" type="email">
+		<input id="email" name="email" type="email"><br><br>
+
 		<label for="phone">Phone</label>
-		<input id="phone" name="phone" type="text">
+		<input id="phone" name="phone" type="text"><br><br>
+
 		<label for="company">Company</label>
-		<input id="company" name="company" type="text">
+		<input id="company" name="company" type="text"><br><br>
+
 		<label for="notes">Notes</label>
-		<textarea id="notes" name="notes" type="text"></textarea>
-		<input id="submit" type="submit" value="Save contact">
+		<textarea id="notes" name="notes" type="text"></textarea><br><br>
+
+		<input id="submit" type="submit" value="Save contact"><br><br>
 	</form>
+
 	<div id="contact-list"></div>
 	<script src="./assets/js/app.js"></script>
 	
-	<button  id="update-contact">Update Contact</button>
+	<button  id="add-contact">Add Contact</button>
+	<button  id="edit-contact">Edit Contact</button>
+
 </body>
-</html> 
+</html>
+
