giving up on my update button, too much bugging and too little knowlege...

--- a/src/index.html
+++ b/src/index.html
@@ -30,10 +30,11 @@
 
 	</form>
 
+	<button  id="add-contact">Add Contact</button>
+
 	<div id="contact-list"></div>	
 	<script src="./assets/js/app.js"></script>
-	
-	<button  id="add-contact">Add Contact</button>
+	<script src="./assets/css/index.css"></script>
 
 </body>
 </html>
