css and html files connect

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
 	<meta  name="viewport"  content="width=device-width, initial-scale=1.0">
 	<meta  http-equiv="X-UA-Compatible"  content="ie=edge">
 	<title>My Address book</title>
+	<link rel="stylesheet" href="./index.css"></link>
+	<script src="./assets/js/app.js"></script>
 </head>
 
 <body>
@@ -31,10 +33,7 @@
 	</form>
 
 	<button  id="add-contact">Add Contact</button>
-
-	<div id="contact-list"></div>	
-	<script src="./assets/js/app.js"></script>
-	<script src="./assets/css/index.css"></script>
+	<div id="contact-list"></div>
 
 </body>
 </html>
