--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<h1>My Address Book</h1>
-	<form id="new-contact-form">
+	<form id="new-contact-form" class="form">
 
 		<label for="name">Name</label>
 		<input id="name" name="name" type="text"><br><br>
@@ -32,7 +32,7 @@
 
 	</form>
 
-	<button  id="add-contact">Add Contact</button>
+	<button  id="add-contact" class="addButton">Add Contact</button>
 	<div id="contact-list"></div>
 
 </body>
