css styling of save and add buttons

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		<label for="notes">Notes</label>
 		<textarea id="notes" name="notes" type="text"></textarea><br><br>
 
-		<input id="submit" type="submit" value="Save contact"><br><br>
+		<input id="submit" class="saveButton" type="submit" value="Save contact"><br><br>
 
 	</form>
 
