commenting out edit button functions

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 	</form>
 	
 	<button  id="add-contact" class="addButton">Add Contact</button>
-	<div id="contact-list"></div>
+	<div id="contact-list" class="contactList"></div>
 
 </body>
 </html>
