add last css styling and comment out editbutton

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
 	<meta  charset="UTF-8">
 	<meta  name="viewport"  content="width=device-width, initial-scale=1.0">
 	<meta  http-equiv="X-UA-Compatible"  content="ie=edge">
-	<title>My Address book</title>
+	<title>The Address book</title>
 	<link rel="stylesheet" href="./index.css"></link>
-	<script src="./assets/js/app.js"></script>
+	<script src="./app.js"></script>
 </head>
 
 <body>
-	<h1>My Address Book</h1>
+	
+	<div id="contact-list" class="contactList"></div>
 	<form id="new-contact-form" class="form">
 
 		<label for="name">Name</label>
@@ -32,8 +33,9 @@
 
 	</form>
 	
+	<h1>The Address Book</h1>
 	<button  id="add-contact" class="addButton">Add Contact</button>
-	<div id="contact-list" class="contactList"></div>
+	
 
 </body>
 </html>
